[lworld] TypeAryPtr::cast_to_not_null_free hits assert(!not_null_free || !is_flat()) failed: inconsistency

XMLWordPrintable

      runtime/valhalla/inlinetypes/InlineOops.java spuriously fails with:

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/open/src/hotspot/share/opto/type.cpp:4995), pid=3877753, tid=3877777
      # assert(!not_null_free || !is_flat()) failed: inconsistency
      #
      # JRE version: Java(TM) SE Runtime Environment (22.0) (fastdebug build 22-lworld4ea-2023-11-06-1544380.tobias.hartmann.valhalla)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 22-lworld4ea-2023-11-06-1544380.tobias.hartmann.valhalla, mixed mode, sharing, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
      # Problematic frame:
      # V [libjvm.so+0x16ae2ec] TypeAryPtr::cast_to_not_null_free(bool) const+0x2dc

      Current CompileTask:
      C2: 1194 203 % runtime.valhalla.inlinetypes.InlineOops::validatePeople @ 25 (44 bytes)

      Stack: [0x0000ffff437d8000,0x0000ffff439d6000], sp=0x0000ffff439d0cf0, free space=2019k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x16ae2ec] TypeAryPtr::cast_to_not_null_free(bool) const+0x2dc (type.cpp:4995)
      V [libjvm.so+0xcc456c] GraphKit::gen_checkcast(Node*, Node*, Node**, bool)+0x102c (graphKit.cpp:3594)
      V [libjvm.so+0x1438150] Parse::do_checkcast()+0xf0 (parseHelper.cpp:98)
      V [libjvm.so+0x1430940] Parse::do_one_bytecode()+0x2d00 (parse2.cpp:3477)
      V [libjvm.so+0x14187ac] Parse::do_one_block()+0x59c (parse1.cpp:1648)
      V [libjvm.so+0x1419700] Parse::do_all_blocks()+0x150 (parse1.cpp:740)
      V [libjvm.so+0x141de18] Parse::Parse(JVMState*, ciMethod*, float)+0xd98 (parse1.cpp:644)
      V [libjvm.so+0x7854a8] ParseGenerator::generate(JVMState*)+0x168 (callGenerator.cpp:100)
      V [libjvm.so+0x788544] PredictedCallGenerator::generate(JVMState*)+0x2c0 (callGenerator.cpp:1048)
      V [libjvm.so+0xabbbfc] Parse::do_call()+0x6ec (doCall.cpp:676)
      V [libjvm.so+0x142e2fc] Parse::do_one_bytecode()+0x6bc (parse2.cpp:3474)
      V [libjvm.so+0x14187ac] Parse::do_one_block()+0x59c (parse1.cpp:1648)
      V [libjvm.so+0x1419700] Parse::do_all_blocks()+0x150 (parse1.cpp:740)
      V [libjvm.so+0x141de18] Parse::Parse(JVMState*, ciMethod*, float)+0xd98 (parse1.cpp:644)
      V [libjvm.so+0x7854a8] ParseGenerator::generate(JVMState*)+0x168 (callGenerator.cpp:100)
      V [libjvm.so+0xabbbfc] Parse::do_call()+0x6ec (doCall.cpp:676)
      V [libjvm.so+0x142e2fc] Parse::do_one_bytecode()+0x6bc (parse2.cpp:3474)
      V [libjvm.so+0x14187ac] Parse::do_one_block()+0x59c (parse1.cpp:1648)
      V [libjvm.so+0x1419700] Parse::do_all_blocks()+0x150 (parse1.cpp:740)
      V [libjvm.so+0x141de18] Parse::Parse(JVMState*, ciMethod*, float)+0xd98 (parse1.cpp:644)
      V [libjvm.so+0x7854a8] ParseGenerator::generate(JVMState*)+0x168 (callGenerator.cpp:100)
      V [libjvm.so+0xabbbfc] Parse::do_call()+0x6ec (doCall.cpp:676)
      V [libjvm.so+0x142e2fc] Parse::do_one_bytecode()+0x6bc (parse2.cpp:3474)
      V [libjvm.so+0x14187ac] Parse::do_one_block()+0x59c (parse1.cpp:1648)
      V [libjvm.so+0x1419700] Parse::do_all_blocks()+0x150 (parse1.cpp:740)
      V [libjvm.so+0x141de18] Parse::Parse(JVMState*, ciMethod*, float)+0xd98 (parse1.cpp:644)
      V [libjvm.so+0x7854a8] ParseGenerator::generate(JVMState*)+0x168 (callGenerator.cpp:100)
      V [libjvm.so+0x93efe8] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1014 (compile.cpp:792)
      V [libjvm.so+0x783050] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x110 (c2compiler.cpp:119)
      V [libjvm.so+0x94af84] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x8e4 (compileBroker.cpp:2276)
      V [libjvm.so+0x94b9b4] CompileBroker::compiler_thread_loop()+0x594 (compileBroker.cpp:1944)
      V [libjvm.so+0xdf839c] JavaThread::thread_main_inner()+0xec (javaThread.cpp:721)
      V [libjvm.so+0x1681e64] Thread::call_run()+0xb0 (thread.cpp:217)
      V [libjvm.so+0x13c6f38] thread_native_entry(Thread*)+0x138 (os_linux.cpp:783)
      C [libc.so.6+0x857d8] start_thread+0x2d8

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: