8319967: [lworld] TypeAryPtr::cast_to_not_null_free hits assert(\!not_null_free || \!is_flat()) failed: inconsistency